--- a/calll.html
+++ b/calll.html
@@ -2,42 +2,51 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="classCont">
-        <div class="container">
-            <input type="text" class="input" placeholder="Calculate Here" />
-            <div class="pee">
-                <button class="bton">1</button>
-                <button class="bton">2</button>
-                <button class="bton">3</button>
-            </div>
-            <div class="pee">
-                <button class="bton">4</button>
-                <button class="bton">5</button>
-                <button class="bton">6</button>
-            </div>
-            <div class="pee">
-                <button class="bton">7</button>
-                <button class="bton">8</button>
-                <button class="bton">9</button>
-            </div>
-            <div class="pee">
-                <button class="bton">0</button>
-                <button class="bton">+</button>
-                <button class="bton">-</button>
-            </div>
-            <div class="pee">
-                <button class="bton">*</button>
 
-                <button class="bton">C</button>
-                <button class="bton">=</button>
+        <div class="container">
+            <h1 class="h1">Make your Calculations Easy</h1>
+            <div>
+                <input type="text" class="input" placeholder="       Calculate Here" />
+            </div>
+            <div>
+                <div class="pee">
+                    <button class="bton">1</button>
+                    <button class="bton">2</button>
+                    <button class="bton">3</button>
+                </div>
+                <div class="pee">
+                    <button class="bton">4</button>
+                    <button class="bton">5</button>
+                    <button class="bton">6</button>
+                </div>
+                <div class="pee">
+                    <button class="bton">7</button>
+                    <button class="bton">8</button>
+                    <button class="bton">9</button>
+                </div>
+                <div class="pee">
+                    <button class="bton">0</button>
+                    <button class="bton">+</button>
+                    <button class="bton">-</button>
+                </div>
+                <div class="pee">
+                    <button class="bton">*</button>
+
+                    <button class="bton">C</button>
+                    <button class="bton">=</button>
+                </div>
             </div>
         </div>
     </div>
-    <script src="text.js"></script>
+
 </body>
 
 </html>
